test/conformance/chainsaw/cli/with-namespace/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-invalid
  namespace: test
  labels:
    app: busybox
spec:
  containers:
  - name: nginx
    image: nginx:latest
