test/conformance/chainsaw/cli/with-namespace/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: with-namespace
    try:
    - script:
        content: kyverno test .
        check:
          ($error != null): true
