test/conformance/chainsaw/cli/with-namespace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  // policy name is incorrect
  policy: test/preconditions 
  resources:
  - test-invalid
  result: fail
  rule: any-rule
